Use of slf4j string replacement "{}" in some places